--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Stuart Allison
 description: Operations Research Officer
+logo: images/Allison.jpeg
 show_downloads: no
 theme: jekyll-theme-minimal
